@@ -327,6 +327,14 @@ Pass ARG to the command ‘yank’."
   (setq py-electric-colon-active-p (not py-electric-colon-active-p))
   (when (and py-verbose-p (called-interactively-p 'interactive)) (message "py-electric-colon-active-p: %s" py-electric-colon-active-p)))
 
+(defun py-toggle-py-electric-backspace ()
+  "Toggle py-electric-backspace-mode."
+  (interactive)
+  ;; (py-electric-backspace-mode))
+  (setq py-electric-backspace-mode (not py-electric-backspace-mode))
+  (if py-electric-backspace-mode  (py-electric-backspace-mode 1) (py-electric-backspace-mode -1))
+  (when (and py-verbose-p (called-interactively-p 'interactive)) (message "py-electric-backspace-mode: %s" py-electric-backspace-mode)))
+
 ;; TODO: PRouleau: It might be beneficial to have toggle commands for all
 ;;       the electric behaviours, not just the electric colon.
 
@@ -337,6 +345,33 @@ Pass ARG to the command ‘yank’."
 (put (quote py-electric-backspace) 'pending-delete 'supersede) ;pending-del
 (put (quote py-electric-delete) 'delete-selection 'supersede) ;delsel
 (put (quote py-electric-delete) 'pending-delete 'supersede) ;pending-del
+
+(define-minor-mode py-electric-backspace-mode
+  "When on, <backspace> key will delete all whitespace chars before point.
+
+Default is nil"
+  :group 'python-mode
+  :lighter " eb"
+  (if py-electric-backspace-mode
+      (if (ignore-errors (functionp 'keymap-local-set))
+          (keymap-local-set "<backspace>" 'py-electric-backspace)
+        (local-set-key "<backspace>" 'py-electric-backspace))
+    (if (ignore-errors (functionp 'keymap-local-unset))
+        (keymap-local-unset "<backspace>")
+      (local-unset-key "<backspace>"))))
+
+(defcustom py-electric-backspace-mode nil
+  "When ‘t’, <backspace> key will delete all whitespace chars before point.
+
+Default nil"
+
+  :type 'boolean
+  :tag "py-electric-backspace-mode"
+  :group 'python-mode
+  :safe 'booleanp
+  :set (lambda (symbol value)
+         (set-default symbol value)
+         (py-electric-backspace-mode (if value 1 0))))
 
 (provide 'python-components-electric)
 ;;; python-components-electric.el ends here
