@@ -37,7 +37,6 @@ Default is t")
         (define-key map [(:)] (quote py-electric-colon))
         (define-key map [(\#)] (quote py-electric-comment))
         (define-key map [(delete)] (quote py-electric-delete))
-        (define-key map [(backspace)] (quote py-electric-backspace))
         (define-key map [(control backspace)] (quote py-hungry-delete-backwards))
         (define-key map [(control c) (delete)] (quote py-hungry-delete-forward))
         ;; (define-key map [(control y)] (quote py-electric-yank))
