@@ -2224,10 +2224,13 @@ See also ‘py-execute-directory’Use `M-x customize-variable' to set it perman
 		 (not py-fileless-buffer-use-default-directory-p))
 	   :help "When ‘py-use-current-dir-when-execute-p’ is non-nil and no buffer-file exists, value of ‘default-directory’ sets current working directory of Python output shellUse `M-x customize-variable' to set it permanently"
 	   :style toggle :selected py-fileless-buffer-use-default-directory-p])
-
+         ["Py-electric-backspace-mode" py-electric-backspace-mode
+	  :help " ‘py-electric-backspace-mode’
+If <backspace> key deletes one or more of whitespace chars left from point .
+Default is nil."
+	  :style toggle :selected py-electric-backspace-mode]
 	 ("Underscore word syntax"
 	  :help "Toggle ‘py-underscore-word-syntax-p’"
-
 	  ["Toggle underscore word syntax" py-toggle-underscore-word-syntax-p
 	   :help " ‘py-toggle-underscore-word-syntax-p’
 
@@ -2326,6 +2329,9 @@ set it permanently"
 See bug report at launchpad, lp:944093. Use `M-x customize-variable' to set it permanently"
 	  :style toggle :selected py-edit-only-p])))
       ("Other"
+       ["Py-electric-backspace-mode" py-electric-backspace-mode
+	:help " ‘py-electric-backspace-mode’
+If <backspace> key deletes one or more of whitespace chars left from point ."]
        ["Boolswitch" py-boolswitch
 	:help " ‘py-boolswitch’
 Edit the assignment of a boolean variable, revert them."]
